--- a/package.json
+++ b/package.json
@@ -18,27 +18,25 @@
     "build": "tsc",
     "format": "prettier --no-error-on-unmatched-pattern --config ./.prettierrc --write \"**/*.{ts,yml,yaml,json}\"",
     "format:check": "prettier --no-error-on-unmatched-pattern --config ./.prettierrc --check \"**/*.{ts,yml,yaml,json}\"",
-    "lint": "eslint --config ./.eslintrc.js \"**/*.ts\"",
-    "lint:fix": "eslint --config ./.eslintrc.js \"**/*.ts\" --fix"
+    "lint": "eslint --config ./eslint.config.mjs \"src/**/*.ts\"",
+    "lint:fix": "eslint --config ./eslint.config.mjs \"src/**/*.ts\" --fix"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb-base": "15.0.0",
+    "@types/node": "^20.12.13",
+    "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^28.5.0",
-    "eslint-plugin-node": "^11.1.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.4.5"
+    "ts-jest": "^29.1.4",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.11.0"
   }
 }
