--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "bazel-range-action",
   "version": "0.1.0",
-  "description": "A GitHub Action for computing Bazel impacted targets and labelling pull requests automatically.",
-  "keywords": [
-    "bazel",
-    "github",
-    "actions"
-  ],
+  "description": "A GitHub Action to compute impacted targets and tags for a pull request based on Bazel.",
+  "keywords": ["bazel", "github", "actions"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/new-buds/bazel-range-action.git"
@@ -15,28 +11,16 @@
   "license": "GPL-3.0-only",
   "main": "dist/main.js",
   "scripts": {
-    "build": "tsc",
-    "format": "prettier --no-error-on-unmatched-pattern --config ./.prettierrc --write \"**/*.{ts,yml,yaml,json}\"",
-    "format:check": "prettier --no-error-on-unmatched-pattern --config ./.prettierrc --check \"**/*.{ts,yml,yaml,json}\"",
-    "lint": "eslint --config ./eslint.config.mjs \"src/**/*.ts\"",
-    "lint:fix": "eslint --config ./eslint.config.mjs \"src/**/*.ts\" --fix"
+    "checker": "biome check --write ./",
+    "build": "tsc"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.3.0",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.13",
-    "eslint": "^9.3.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^28.5.0",
-    "jest": "^29.7.0",
-    "prettier": "^3.2.5",
-    "ts-jest": "^29.1.4",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.11.0"
+    "@biomejs/biome": "1.8.3",
+    "@types/node": "^20.14.8",
+    "typescript": "^5.5.4"
   }
 }
